--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
 				<section>
 					<h3>Hoje utilizamos Drupal</h3>
 					<div>
-						<img width="100" class="drupal-img no-border no-shadow" style="float: left;" src="../lib/img/drupal-logo.png"/>
+						<img width="100" class="drupal-img no-border no-shadow" style="float: left;" src="lib/img/drupal-logo.png"/>
 						<ul class="list">
 							<li class="fragment highlight-blue"><em>CMS escrito em PHP</em></li>
 							<li class="fragment highlight-red"><em>Comunidade pouco ativa</em></li>
@@ -219,7 +219,7 @@
 					<section>
 						<h3><strong>Foco em redes</strong></h3>
 						<p>O <em>We</em> é pensado para atender o desenvolvimento de redes em geral, sendo uma solução completa e moderna.</p>
-						<img width="720" class="no-border" src="../lib/img/network.jpg">
+						<img width="720" class="no-border" src="lib/img/network.jpg">
 					</section>
 					<section>
 						<h2>Realtime (web 3.0)</h2>
