--- a/index.html
+++ b/index.html
@@ -238,15 +238,15 @@
 					<h1>É isso!</h1>
 					<h4>Links de referência</h4>
 					<ul class="list">
-						<li><a href="http://atencaobasica.org.br/">Comunidade de Práticas</a></li>
-						<li><a href="http://wejs.org">We.js</a></li>
+						<li><a href="http://atencaobasica.org.br/" target="_blank">Comunidade de Práticas</a></li>
+						<li><a href="http://wejs.org/" target="_blank">We.js</a></li>
 					</ul>
 					<br>
 				</section>
 
 			</div>
 
-			<small class="small-bottom">Slide disponível em: <a href="#">http://cdp-slides/</a></small>
+			<small class="small-bottom">Slide disponível <a href="http://danielfeelfine.github.io/1108-1508-desenvolvimento/#/" target="_blank">aqui.</a></small>
 		</div>
 
 		<script src="lib/js/head.min.js"></script>
