update We name to We.js

--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
 
 				<section>
 					<section>
-						<h2><strong>We</strong></h2>
+						<h2><strong>We.js</strong></h2>
 						<p>
 							<em>Framework realtime com o foco em dinâmicas de rede</a>.</em>
 						</p>
@@ -218,7 +218,7 @@
 					</section>
 					<section>
 						<h3><strong>Foco em redes</strong></h3>
-						<p>O <em>We</em> é pensado para atender o desenvolvimento de redes em geral, sendo uma solução completa e moderna.</p>
+						<p>O <em>We.js</em> é pensado para atender o desenvolvimento de redes em geral, sendo uma solução completa e moderna.</p>
 						<img width="720" class="no-border" src="lib/img/network.jpg">
 					</section>
 					<section>
