--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
 					<h3>Contexto da CdP</h3>
 					<ul class="list">
 						<li class="fragment highlight-blue"><em>Mais de 30mil usuários</em></li>
-						<li class="fragment highlight-blue"><em>Rede dinâmica: mudanças e melhorias constantes</em></li>
+						<li class="fragment highlight-blue"><em>Projeto dinâmico: mudanças e melhorias constantes</em></li>
 						<li class="fragment highlight-blue"><em>Comunicação intensa entre os integrantes da rede</em></li>
 					</ul>
 				</section>
