--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
 						<img width="100" class="drupal-img no-border no-shadow" style="float: left;" src="lib/img/drupal-logo.png"/>
 						<ul class="list">
 							<li class="fragment highlight-blue"><em>CMS escrito em PHP</em></li>
-							<li class="fragment highlight-red"><em>Comunidade pouco ativa</em></li>
+							<li class="fragment highlight-red"><em>Comunidade <strong>menos</strong> ativa</em></li>
 							<li class="fragment highlight-red"><em>I/O Síncrono</em></li>
 						</ul>
 					</div>
@@ -246,7 +246,7 @@
 
 			</div>
 
-			<small class="small-bottom">Slide disponível <a href="http://danielfeelfine.github.io/1108-1508-desenvolvimento/#/" target="_blank">aqui.</a></small>
+			<small class="small-bottom">Apresentação disponível em: <strong><a href="http://bit.ly/cdp-desenvolvimento" target="_blank">http://bit.ly/cdp-desenvolvimento</a></strong></small>
 		</div>
 
 		<script src="lib/js/head.min.js"></script>
